# AI_Project

./: README.md  pyproject.toml
src/: app.py  lstm.py  lstm_app.py  main.py  models.py  multiple_regression.py  multiple_regression_app.py  process_data.py
src/lstm/: app.py  lstm.py
src/multiple_regression/: app.py  multiple_regression.py
