[tool.poetry]
name = "ai-project"
version = "0.1.0"
description = ""
authors = ["ReiMatsui-muilab <rei.matsui@muilab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
pydantic = "^2.10.3"
loguru = "^0.7.3"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
